--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="menu_list_wrap">
 				<ul class="menu_list">
 					<li class="menu_item"><a href="index.html" class="menu_link"><span class="menu_txtBox">トップページ</span></a></li>
-					<li class="menu_item"><a href="about.html" class="menu_link"><span class="menu_txtBox">社長メッセージ</span></a></li>
-					<li class="menu_item"><a href="outline.html" class="menu_link"><span class="menu_link menu_link_current"><span class="menu_txtBox">企業概要</span></span></a></li>
+					<li class="menu_item"><a href="about.html" class="menu_link"><span class="menu_link menu_link_current"><span class="menu_txtBox">社長メッセージ</span></span></a></li>
+					<li class="menu_item"><a href="outline.html" class="menu_link"><span class="menu_txtBox">企業概要</span></a></li>
 					<li class="menu_item"><a href="content.html" class="menu_link"><span class="menu_txtBox">事業内容</span></a></li>
 					<li class="menu_item"><a href="achievement.html" class="menu_link"><span class="menu_txtBox">実績</span></a></li>
 					<li class="menu_item"><a href="bank.html" class="menu_link"><span class="menu_txtBox">取り扱い銀行</span></a></li>
@@ -54,20 +54,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 		
 		<div class="article">
-			<h2 class="articleTtl">企業概要<br></h2>
+			<h2 class="articleTtl">社長メッセージ<br></h2>
 			
 			
 			<div class="outline_sectionBox">
 				<p class="outline_prgrph">
-社名：株式会社 関西企画（商号：関西企画旅行）<br />
-英文社名：KANSAI KIKAKU CO.,LTD.<br />
-設立：平成26年(2014年)7月2日<br />
-登録番号：大阪府知事登録旅行業第3-2972<br />
-中連協指定番号：1610-001<br />
-代表取締役：黄　克儂<br />
-住所：大阪府大阪市阪市北区天神橋2丁目5番28号 千代田第二ビル7階A号室<br />
-（2022年10月1日より大阪市中央区南船場一丁目6-13第二協和ビルに移転）<br />
-
+						　関西企画旅行は2014年7月、旅行業務を中心として起業し、訪日外国人旅行や外国人パッケージツアー、ビジネス研修旅行、修学旅行、個人旅行などの取り扱いで、ご利用いただいたお客様、並びにホテル業、旅客運輸業、特産販売業、観光案内士の皆様から多大なるご支持とお取引先様との良好な信頼関係を結びつけ、着実に成長し続けてまいりました。
+　2019年、取り扱い旅客数が22,000余人で、売上額が7億円超となり、前年度比でいずれも3割増ほどの躍進的な発展を遂げました。
+　さて、2020年は新型コロナウイルス感染症の拡大により、私ども旅行業界はもとより、多くの業種が不曽有の危機に見舞われました。今後、従業員一同、たゆまない努力を惜しまず、常に変化を求め前進してまいります。
+　引き続きご支援とご愛顧のほど宜しくお願い申し上げます。<br>
+<img src="images/img2.jpg">
 
 				</p>
 			</div>		
