--- a/content.html
+++ b/content.html
@@ -34,20 +34,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div>
 </div>		
 		<div class="pageTtl_wrap">
-			<h1 class="pageTtl">関西企画会社情報<br><span class="pageTtl_en gFonts_roboto">Company Profile</span></h1>
+			<h1 class="pageTtl">株式会社関西企画会社情報<br><span class="pageTtl_en gFonts_roboto">Company Profile</span></h1>
 		</div>
 		
 		<div class="menu_wrap">
 			<p class="menuLabel sp"><span class="menuLabel_txt">社長メッセージ</span><span class="menuLabel_btn"></span></p>
 			<div class="menu_list_wrap">
 				<ul class="menu_list">
-					<li class="menu_item"><a href="index.html" class="menu_link"><span class="menu_txtBox">社長メッセージ</span></a></li>
-					<li class="menu_item"><a href="idea.html" class="menu_link"><span class="menu_txtBox">企業理念</span></a></li>
+					<li class="menu_item"><a href="index.html" class="menu_link"><span class="menu_txtBox">トップページ</span></a></li>
+					<li class="menu_item"><a href="about.html" class="menu_link"><span class="menu_txtBox">社長メッセージ</span></a></li>
 					<li class="menu_item"><a href="outline.html" class="menu_link"><span class="menu_txtBox">企業概要</span></a></li>
 					<li class="menu_item"><a href="content.html" class="menu_link"><span class="menu_link menu_link_current"><span class="menu_txtBox">事業内容</span></span></a></li>
 					<li class="menu_item"><a href="achievement.html" class="menu_link"><span class="menu_txtBox">実績</span></a></li>
 					<li class="menu_item"><a href="bank.html" class="menu_link"><span class="menu_txtBox">取り扱い銀行</span></a></li>
 					<li class="menu_item"><a href="organization.html" class="menu_link"><span class="menu_txtBox">組織図</span></a></li>
+					<li class="menu_item"><a href="line.html" class="menu_link"><span class="menu_txtBox">モデルコース</span></a></li>
 				</ul>
 			</div>
 		</div>
