--- a/line.html
+++ b/line.html
@@ -43,30 +43,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<ul class="menu_list">
 					<li class="menu_item"><a href="index.html" class="menu_link"><span class="menu_txtBox">トップページ</span></a></li>
 					<li class="menu_item"><a href="about.html" class="menu_link"><span class="menu_txtBox">社長メッセージ</span></a></li>
-					<li class="menu_item"><a href="outline.html" class="menu_link"><span class="menu_link menu_link_current"><span class="menu_txtBox">企業概要</span></span></a></li>
+					<li class="menu_item"><a href="outline.html" class="menu_link"><span class="menu_txtBox">企業概要</span></a></li>
 					<li class="menu_item"><a href="content.html" class="menu_link"><span class="menu_txtBox">事業内容</span></a></li>
 					<li class="menu_item"><a href="achievement.html" class="menu_link"><span class="menu_txtBox">実績</span></a></li>
 					<li class="menu_item"><a href="bank.html" class="menu_link"><span class="menu_txtBox">取り扱い銀行</span></a></li>
 					<li class="menu_item"><a href="organization.html" class="menu_link"><span class="menu_txtBox">組織図</span></a></li>
-					<li class="menu_item"><a href="line.html" class="menu_link"><span class="menu_txtBox">モデルコース</span></a></li>
+					<li class="menu_item"><a href="line.html" class="menu_link"><span class="menu_link menu_link_current"><span class="menu_txtBox">モデルコース</span></span></a></li>
 				</ul>
 			</div>
 		</div>
 		
 		<div class="article">
-			<h2 class="articleTtl">企業概要<br></h2>
+			<h2 class="articleTtl">モデルコース<br></h2>
 			
 			
 			<div class="outline_sectionBox">
 				<p class="outline_prgrph">
-社名：株式会社 関西企画（商号：関西企画旅行）<br />
-英文社名：KANSAI KIKAKU CO.,LTD.<br />
-設立：平成26年(2014年)7月2日<br />
-登録番号：大阪府知事登録旅行業第3-2972<br />
-中連協指定番号：1610-001<br />
-代表取締役：黄　克儂<br />
-住所：大阪府大阪市阪市北区天神橋2丁目5番28号 千代田第二ビル7階A号室<br />
-（2022年10月1日より大阪市中央区南船場一丁目6-13第二協和ビルに移転）<br />
+ 
+1.<a href="images/成田IN成田OUT東京・日光６日間(訂正分).pdf" target="_blank">成田IN成田OUT東京・日光６日間</a><br />
+2.<a href="images/成田IN関空OUT周遊6日間(訂正分).pdf" target="_blank">成田IN関空OUT周遊6日間</a><br />
+3.<a href="images/関空or中部IN関空OUT6日間(訂正分).pdf" target="_blank">関空or中部IN関空OUT6日間</a><br />
 
 
 				</p>
