--- a/outline.html
+++ b/outline.html
@@ -34,7 +34,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div>
 </div>		
 		<div class="pageTtl_wrap">
-			<h1 class="pageTtl">株式会社関西企画会社情報<br><span class="pageTtl_en gFonts_roboto">Company Profile</span></h1>
+			<h1 class="pageTtl">株式会社関西企画<br><span class="pageTtl_en gFonts_roboto">Company Profile</span></h1>
 		</div>
 		
 		<div class="menu_wrap">
@@ -66,7 +66,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 中連協指定番号：1610-001<br />
 代表取締役：黄　克儂<br />
 住所：大阪府大阪市阪市北区天神橋2丁目5番28号 千代田第二ビル7階A号室<br />
-（2022年10月1日より大阪市中央区南船場一丁目6-13第二協和ビルに移転）<br />
 
 
 				</p>
