--- a/bank.html
+++ b/bank.html
@@ -34,7 +34,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div>
 </div>		
 		<div class="pageTtl_wrap">
-			<h1 class="pageTtl">株式会社関西企画会社情報<br><span class="pageTtl_en gFonts_roboto">Company Profile</span></h1>
+			<h1 class="pageTtl">株式会社関西企画<br><span class="pageTtl_en gFonts_roboto">Company Profile</span></h1>
 		</div>
 		
 		<div class="menu_wrap">
