--- a/idea.html
+++ b/idea.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>会社概要|阪急交通社</title>
-<meta name="keywords" content="会社概要、阪急交通社、旅行会社、旅行代理店、トラピックス、イーベリー、クリスタルハート、ロイヤルコレクション">
-<meta meta="" name="description" content="阪急交通社の会社概要のご案内です。">
+<title>株式会社関西企画</title>
+<meta name="keywords" content="株式会社関西企画">
+<meta meta="" name="description" content="株式会社関西企画">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <meta http-equiv="content-style-type" content="text/css">
