--- a/about.html
+++ b/about.html
@@ -82,4 +82,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!--JS-->
 <script src="images/jquery-3.6.0.min.js" language="javascript"></script>
+<script src="images/base.js" language="javascript"></script>
 </body></html>
