--- a/idea.html
+++ b/idea.html
@@ -38,7 +38,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 		
 		<div class="menu_wrap">
-			<p class="menuLabel sp"><span class="menuLabel_txt">社長メッセージ</span><span class="menuLabel_btn"></span></p>
+			<p class="menuLabel sp"><span class="menuLabel_txt">企業理念</span><span class="menuLabel_btn"></span></p>
 			<div class="menu_list_wrap">
 				<ul class="menu_list">
 					<li class="menu_item"><a href="index.html" class="menu_link"><span class="menu_txtBox">トップページ</span></a></li>
@@ -86,4 +86,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!--JS-->
 <script src="images/jquery-3.6.0.min.js" language="javascript"></script>
+<script src="images/base.js" language="javascript"></script>
 </body></html>
