--- a/outline.html
+++ b/outline.html
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="footer_wrap">
 	<div class="footer_inner">
 
-		<p class="copyright_wrap"><small>Copyright(C)2021 HANKYU TRAVEL INTERNATIONAL CO., LTD All rights reserved</small></p>
+		<p class="copyright_wrap"><small>Copyright(C)2022 KANSAI KIKAKU CO.,LTD. All rights reserved</small></p>
 	</div>
 </div>	</div>
 	<!--ene_contents_wrap-->
