--- a/line.html
+++ b/line.html
@@ -58,21 +58,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			
 			
 			<div class="outline_sectionBox">
-				<p class="outline_prgrph1">
- 
-1.<a href="images/成田IN成田OUT東京・日光６日間(訂正分).png" target="_blank">成田IN成田OUT東京・日光６日間</a><br />
-2.<a href="images/成田IN関空OUT周遊6日間(訂正分).png" target="_blank">成田IN関空OUT周遊6日間</a><br />
-3.<a href="images/関空or中部IN関空OUT6日間(訂正分).png" target="_blank">関空or中部IN関空OUT6日間</a><br />
-
-
-				</p>
 				<p class="outline_prgrph">
- 
+<div class="line">
 1.<a href="images/成田IN成田OUT東京・日光６日間(訂正分).pdf" target="_blank">成田IN成田OUT東京・日光６日間</a><br />
 2.<a href="images/成田IN関空OUT周遊6日間(訂正分).pdf" target="_blank">成田IN関空OUT周遊6日間</a><br />
 3.<a href="images/関空or中部IN関空OUT6日間(訂正分).pdf" target="_blank">関空or中部IN関空OUT6日間</a><br />
-
-
+</div>
+<div class="line1">
+1.<a href="images/成田IN成田OUT東京・日光６日間(訂正分).png" target="_blank">成田IN成田OUT東京・日光６日間</a><br />
+2.<a href="images/成田IN関空OUT周遊6日間(訂正分).png" target="_blank">成田IN関空OUT周遊6日間</a><br />
+3.<a href="images/関空or中部IN関空OUT6日間(訂正分).png" target="_blank">関空or中部IN関空OUT6日間</a><br />
+</div>
 				</p>
 			</div>		
 		</div>
