--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<h2 class="articleTtl">トップページ<br></h2>
 			
 			
-			<div class="outline_sectionBox" style="margin:80px 0 60px 0;">
+			<div class="outline_sectionBox" style="margin:80px 0 60px 0;max-width:1200px;">
 				<div class="slide_section">
 					<ul>
 						<li><img src="images/img3.jpg"></li>
