--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ $(function(){
 
 .slide_section{width:100%;position:relative;overflow:hidden;}
 .slide_section ul{height:100%;width:300%;}
-.slide_section ul li{height:100%;width:calc(100% / 3);float:left;}
+.slide_section ul li{height:100%;width:calc(100% / 3 + 1);float:left;}
 .slide_section ul li img{height:100%;width:100%;display:block;}
 .slide_section .left{position:absolute;left:30px;top:360px;width:30px;height:100px;background:url(images/left1.jpg) no-repeat center;}
 .slide_section .right{position:absolute;right:30px;top:360px;width:30px;height:100px;background:url(images/right1.jpg) no-repeat center;}
