--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<li><img src="images/img3.jpg"></li>
 						<li><img src="images/img4.jpg"></li>
 						<li><img src="images/img5.jpg"></li>
+						<li><img src="images/img6.jpg"></li>
+						<li><img src="images/img7.jpg"></li>
 					</ul>
 					<div class="left"></div>
 					<div class="right"></div>
@@ -89,7 +91,7 @@ $(function(){
 	function move_slide(options){
 		var defaults = {
 			movement_speed : 700,
-			movement_time : 7000,
+			movement_time : 5000,
 			move_type : 0,
 			tt : null
 		};
@@ -135,8 +137,8 @@ $(function(){
 <style type="text/css">
 
 .slide_section{width:100%;position:relative;overflow:hidden;}
-.slide_section ul{height:100%;width:300%;}
-.slide_section ul li{height:100%;width:calc(100% / 3 + 1);float:left;}
+.slide_section ul{height:100%;width:500%;}
+.slide_section ul li{height:100%;width:calc(100% / 5 + 1);float:left;}
 .slide_section ul li img{height:100%;width:100%;display:block;}
 .slide_section .left{position:absolute;left:30px;top:360px;width:30px;height:100px;background:url(images/left1.jpg) no-repeat center;}
 .slide_section .right{position:absolute;right:30px;top:360px;width:30px;height:100px;background:url(images/right1.jpg) no-repeat center;}
