--- a/organization.html
+++ b/organization.html
@@ -17,17 +17,13 @@
 </head>
 
 <body>
-	
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PT8ZVR9"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
 	
 	<div class="contents_wrap">
 		<div class="header_wrap">
 	<div class="nav_wrap navFix">
 		<div class="navBtn_box">
-			<h1 class="logo"><a href="https://www.hankyu-travel.co.jp/" class="logo_link"><img src="images/logo.png" alt="心に届く旅 阪急交通社 Direct to your heart"></a></h1>
+			<h1 class="logo"><a href="/" class="logo_link"><img src="images/logo.png" alt="心に届く旅 阪急交通社 Direct to your heart"></a></h1>
 			<p class="navToggleBtn"><span class="navToggleBtn_line"></span></p>
 		</div>
 		
