--- a/content.html
+++ b/content.html
@@ -55,14 +55,16 @@
 			
 			<div class="outline_sectionBox">
 				<p class="outline_prgrph">
-1.	旅行業法に基づく旅行業<br />
-訪日外国人旅行<br />
-外国人パッケージツアー<br />
-ビジネス研修旅行<br />
-修学旅行<br />
-個人旅行<br />
-2.	観光、文化に関するコンサルタント業務<br />
-3.	交際貿易事業<br />
+1. 旅行業法に基づく旅行業<br />
+   中国公民訪日旅行<br />
+   外国人訪日旅行<br />
+   外国人パッケージツアー<br />
+   ビジネス研修旅行<br />
+   政府、団体、企業視察旅行<br />
+   修学旅行<br />
+   個人旅行<br />
+2. 観光、文化に関するコンサルタント業務<br />
+3. 交際貿易事業<br />
 
 
 				</p>
