--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 			
 			<div class="outline_sectionBox">
 				<p class="outline_prgrph">
-						　関西企画旅行は2014年7月、旅行業務を中心として起業し、訪日外国人旅行や外国人パッケージツアー、ビジネス研修旅行、修学旅行、個人旅行などの取り扱いで、ご利用いただいたお客様、並びにホテル業、旅客運輸業、特産販売業、観光案内士の皆様から多大なるご支持とお取引先様との良好な信頼関係を結びつけ、着実に成長し続けてまいりました。<br>
+　関西企画旅行は2014年7月、旅行業務を中心として起業し、中国公民訪日旅行、外国人訪日旅行、外国人パッケージツアー、ビジネス研修旅行、視察旅行、修学旅行、個人旅行などの取り扱いで、ご利用いただいたお客様、並びにホテル業、旅客運輸業、特産販売業、観光案内士の皆様から多大なるご支持とお取引先様との良好な信頼関係を結びつけ、着実に成長し続けてまいりました。<br>
 　2019年、取り扱い旅客数が22,000余人で、売上額が7億円超となり、前年度比でいずれも3割増ほどの躍進的な発展を遂げました。<br>
 　さて、2020年は新型コロナウイルス感染症の拡大により、私ども旅行業界はもとより、多くの業種が不曽有の危機に見舞われました。今後、従業員一同、たゆまない努力を惜しまず、常に変化を求め前進してまいります。<br>
 　引き続きご支援とご愛顧のほど宜しくお願い申し上げます。<br>
