--- a/outline.html
+++ b/outline.html
@@ -61,7 +61,7 @@
 登録番号：大阪府知事登録旅行業第3-2972<br />
 中連協指定番号：1610-001<br />
 代表取締役：黄　克儂<br />
-住所：大阪府大阪市阪市北区天神橋2丁目5番28号 千代田第二ビル7階A号室<br />
+住所：大阪府大阪市北区天神橋2丁目5番28号 千代田第二ビル7階A号室<br />
 
 
 				</p>
