--- a/bank.html
+++ b/bank.html
@@ -51,11 +51,9 @@
 		
 		<div class="article">
 			<h2 class="articleTtl">取り扱い銀行<br></h2>
-			
-			
 			<div class="outline_sectionBox">
 				<p class="outline_prgrph">
-三菱住友銀行尼崎支店<br />
+三井住友銀行尼崎支店<br />
 店番号：419<br />
 口座番号：5390694<br />
 口座名：カ）カンサイキカク<br />
